--- a/runmerunner/pom.xml
+++ b/runmerunner/pom.xml
@@ -90,6 +90,11 @@
 			  </archive>
 			</configuration>
 		</plugin>
+		<plugin>
+          	<groupId>org.apache.maven.plugins</groupId>
+          	<artifactId>maven-surefire-plugin</artifactId>
+          	<version>2.19.1</version>
+        </plugin>
 			<!-- To get rid of "can't execute jar file no main mainfest-attribute" error  -->
             <!-- https://stackoverflow.com/questions/9689793/cant-execute-jar-file-no-main-manifest-attribute -->
 		</plugins>
