--- a/.github/workflows/runmerunner.yml
+++ b/.github/workflows/runmerunner.yml
@@ -23,15 +23,16 @@ jobs:
         java-version: ${{ matrix.java }}
         java-package: jdk
         architecture: x64
+    - name: copy runmerunner test classes
+      run: cp ./runmerunner/TestClasses/htwb/*.java ./runmerunner/src/main/java/htwb
     - name: runmerunner clean, build, test & package
       run: mvn -pl runmerunner clean package
-    - name: copy runmerunner test classes
-      run: ./runmerunner/TestClasses/htwb/*.java ./runmerunner/src/main/java/htwb
     - name: Run tests
       run: |
         jarpath=$(ls ./runmerunner/target/runmerunner-*.jar)
         jarname=$(basename $jarpath)
         echo $jarname
+        cd runmerunner
         java -jar target/$jarname
         java -jar target/$jarname dieseklassegibtesnicht
         java -jar target/$jarname java.io.Closeable
